# graphoscope

./: .gitignore  Cargo.toml  README.md  TODO.md  bootstrap.js  index.html  index_js.bootstrap.js  publish.sh  start_webserver.sh  x
binding/: Cargo.toml
binding/src/: lib.rs
cmd/: Cargo.toml
cmd/src/: main.rs
dot_files/: 1to3000.dot  aim.dot  aim_min_ambiguty.dot  aim_simp.dot  aim_simp2.dot  horizontal_test.dot  loop.dot  right.dot  right_explicit.dot  self_edge.dot  test.dot  tree.dot  tree3.dot
graph/: Cargo.toml
graph/src/: add_virtual_nodes.rs  dot.pest  draw.rs  generator.rs  graph.rs  lib.rs  ns.rs  place.rs  read_dot.rs  to_dag.rs  xcoord.rs
graph/tests/: integ_test.rs
graph/tests/results/: aim.dot  aim_simp2.dot  test.dot
www/: index.html  index.js  package.json  webpack.config.js
