[package]
name = "binding"
description = "JS binding for graph crate"
version = "0.1.0"
authors = ["Mikhail Modin <mikhailm1@gmail.com>"]
categories = ["wasm"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
graph = { path = "../graph" }
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = "0.1.6"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]